--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="buckymaler.com">
+    <meta name="author" content="torranca">
     <link rel="stylesheet" href="assets/css/main.css">
   </head>
   <body>
